--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-   
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+
    <style type="text/css">
       * {
          box-sizing: border-box;
